compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteVal.kt
// FIR_IDENTICAL
package c

konst i =<!SYNTAX!><!>
